# claude-message-box

./: .dockerignore  .mcp.json  CLAUDE.md  Dockerfile  docker-compose.yml  install.sh  pyproject.toml
.claude-plugin/: plugin.json
hooks/: check-bash.py  hooks.json
msgbox/: __init__.py  __main__.py  channel.py  cli.py  config.py  db.py  filter.py  session.py  template.py  todo.py  yaml_config.py
msgbox/commands/: __init__.py  message.py  session.py  source.py  todo.py
msgbox/sources/: dingtalk.js  dingtalk.py  github.py  inbox.py
skills/start_msg_box/: SKILL.md
skills/stop_msg_box/: SKILL.md
tests/: test_channel.py  test_check_bash.py  test_cli.py  test_db.py  test_dingtalk.py  test_filter.py  test_inbox.py  test_session.py  test_template.py  test_todo.py  test_yaml_config.py
